--- a/public/ar.html
+++ b/public/ar.html
@@ -102,8 +102,18 @@
 <body>
     <div id="loading">
         <h2>Загрузка AR сцены...</h2>
-        <p>Пожалуйста, разрешите доступ к камере</p>
+        <p>Запрашиваем доступ к камере...</p>
+        <div style="margin-top: 20px;">
+            <div style="width: 50px; height: 50px; border: 3px solid #f3f3f3; border-top: 3px solid #007bff; border-radius: 50%; animation: spin 1s linear infinite; margin: 0 auto;"></div>
+        </div>
     </div>
+    
+    <style>
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
     
     <div id="info-panel">
         <div class="furniture-info">
