--- a/public/ar.html
+++ b/public/ar.html
@@ -132,7 +132,7 @@
     <div id="ar-container">
         <a-scene
             vr-mode-ui="enabled: false"
-            arjs="sourceType: webcam; debugUIEnabled: false;"
+            arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
             renderer="logarithmicDepthBuffer: true;"
             embedded
             arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;">
