--- a/public/webxr-professional.html
+++ b/public/webxr-professional.html
@@ -169,7 +169,7 @@
             <p style="margin: 10px 0 20px; opacity: 0.8;">
                 Профессиональное AR размещение мебели с WebXR Hit Testing API
             </p>
-            <button id="start-btn" class="start-btn" onclick="initializeAR()">
+            <button id="start-btn" class="start-btn">
                 🚀 ЗАПУСТИТЬ PROFESSIONAL AR
             </button>
         </div>
@@ -227,7 +227,7 @@
         }
 
         // Инициализация AR
-        window.initializeAR = async function() {
+        async function initializeAR() {
             const startBtn = document.getElementById('start-btn');
             startBtn.disabled = true;
             startBtn.innerHTML = '🔄 Проверка WebXR...';
@@ -300,7 +300,13 @@
                     log('• Устройство поддерживает ARCore');
                 }
             }
-        };
+        }
+
+        // Привязка событий
+        document.addEventListener('DOMContentLoaded', () => {
+            const startBtn = document.getElementById('start-btn');
+            startBtn.addEventListener('click', initializeAR);
+        });
 
         // Инициализация рендерера
         async function initializeRenderer() {
