🪑 Создана рабочая версия AR с креслом на основе Debug Spaces

--- a/public/qr-test-pages.html
+++ b/public/qr-test-pages.html
@@ -177,11 +177,19 @@
         </div>
         
         <div class="qr-grid">
+            <!-- 🪑 Chair Working - РАБОЧАЯ ВЕРСИЯ НА ОСНОВЕ DEBUG SPACES -->
+            <div class="qr-card new" style="order: 1; border: 3px solid #9c27b0;">
+                <h3>🪑 Chair Working</h3>
+                <p><strong>✅ РАБОЧАЯ ВЕРСИЯ!</strong><br>
+                Основано на Debug Spaces - где видели мерцающие кубы</p>
+                <div id="qr-chair-working" class="qr-code"></div>
+                <a href="ar-chair-working.html" class="link">ar-chair-working.html</a>
+            </div>
+            
             <!-- 🪑 Simple Chair - МАКСИМАЛЬНО ПРОСТАЯ ВЕРСИЯ -->
-            <div class="qr-card new" style="order: 1; border: 3px solid #ff6b6b;">
+            <div class="qr-card" style="order: 2; border: 2px solid #ff6b6b;">
                 <h3>🪑 Simple Chair</h3>
-                <p><strong>🎯 ТОЛЬКО ОДИН БОЛЬШОЙ КУБ!</strong><br>
-                Максимально простая версия для диагностики</p>
+                <p>Только один большой красный куб для диагностики</p>
                 <div id="qr-simple-chair" class="qr-code"></div>
                 <a href="ar-simple-chair.html" class="link">ar-simple-chair.html</a>
             </div>
